	- Print warnings if insufficient Java version is used or if JRE is not from Sun.
	- Memory Stick Mode: JabRef automatically loads configuration settings from jabref.xml
	  and also writes them there if enabled.
	- Improved handling of crossrefs. Fields are now resolved in preview and export.
	- Updated dependencies, now using: JempBox-0.2
	- Improved handling of ArXiv URIs.
	- [ 1738920 ] Fixed: Windows Position in Multi-Monitor environment
	- [ 1795355 ] Fixed: LatexFieldFormatter omits "{" on beginning of optional field
	- [ 1297576 ] New feature: Printing of entry preview (use right-click menu)
	- [ 1717849 ] Fixed: Bug in aux import (patch contributed by Kai Eckert)
    - [ 1749613 ] Fixed: About translation
    - [ 1709449 ] Fixed: Clicking a DOI from context menu fails
2.3
    - Added handling of unknown file types when synchronizing the file field.
    - Changed the way customized external file types are stored. Types are now stored in a
      way analogous to a diff from the default types. This allows default types added in later
      versions to appear immediately, even if the user has customized the list.
    - Moved file preferences from General tab to new File tab.
    - Reduced horizontal size of preferences dialog.
    - Fixed handling of quotes when using the "abbr" modifier for key generator (Debian bug
      #448917).
    - Download file procedure now strips query string in order to find correct file extension
      (Debian bug #448027).    
2.3b3
    - Export formats that output the character encoding now use common names for encodings
      instead of Java-specific names.
    - Added "Open" button in external link dialog box to test or use the link.
    - Added formatter WrapFileLinks which iterates over file links, producing a formatted
      string for each containing any desired information about the file link.
    - Applied Fedor Bezrukov patch (setting User-Agent in URLDownload to solve ArXiv problem).